--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,25 @@
 [package]
-name = "job_scheduler"
+name = "rust_trader"
 version = "0.1.0"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 tokio = { version = "1", features = ["full"] }
 petgraph = "0.6"
 log = "0.4"
 env_logger = "0.9"
+reqwest = "0.11"
+tokio-tungstenite = "0.15"
+serde_json = "1.0"
+dotenv = "0.15.0"
+chrono = "0.4.35"
+futures = "0.3"
+rust_decimal = "1.34.3"
+
+[dependencies.uuid]
+version = "1.7.0"
+features = [
+    "v4",                # Lets you generate random UUIDs
+    "fast-rng",          # Use a faster (but still sufficiently random) RNG
+    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
+]
